Added panel to test Backprop network. Added warning message that displays when a csv file with the wrong number of columns is opened.